5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1692_1100.log
== TEST (2019-04-30 18:56:17) 
-- CODE:
tartaruga="2"
int(input("valor: "))
print("2")

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:56:33) 
-- CODE:
tartaruga="2"
int(input("valor: "))
print("3")

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:17:19) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
		print("Animal: Invalido")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
				



-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:17:37) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
		print("Animal: Invalido")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
				



-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:17:46) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
		print("Animal: Invalido")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
				



-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:18:32) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
		print("Animal: Invalido")				



-- ERROR:
File "XXXX", line 20
    elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:20:17) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
		



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:20:36) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
		



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:20:43) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
		



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:20:53) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
		



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:21:56) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:22:06) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:22:12) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- EXECUTION TIME:
0.178065
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:22:30) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:02) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:33) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:54) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:23:59) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garça")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onça-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:24:23) 
-- CODE:
v=int(input("valor: "))
print("Entrada:",v)
if	(v==2):
	print("Animal: Tartaruga")
else: 
	if (v==5):
		print("Animal: Garca")
	else:
		if (v==10):
			print("Animal: Arara")
		else: 
			if (v==20):
				print("Animal: Mico-leao-dourado")
			else:
				if (v==50):
					print("Animal: Onca-pintada")
				else: 
					if (v==100):
						print("Animal: Garoupa")
					elif((v!=2) or (v!=5) or (v!=10) or (v!=20) or (v!= 50) or (v!=100)):
							print("Animal: Invalido")				



-- EXECUTION TIME:
0.143927
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
